<resources>
    <string name="app_name">Calculator</string>
    <string name="btnxy">x<sup>y</sup></string>
    <string name="btn1x">1/x</string>
    <string name="btnd">()</string>
    <string name="btndeletelast">x</string>
    <string name="btndeleteAll">C</string>
    <string name="btnProc">%</string>
    <string name="btnCor">√</string>
    <string name="btnDil">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnmultiply">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnmin">-</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btnpl">+</string>
    <string name="btn0">0</string>
    <string name="btndrob">,</string>
    <string name="btnres">=</string>
</resources>