<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="65dp"
        android:background="#0C0C0B"
        android:textColor="#F6FAFA"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#0C0C0B">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1x"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn1x"
                android:textSize="25dp" />
            <Button
                android:id="@+id/btnxy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnxy"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnd"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btndeletelast"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btndeletelast"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btndeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btndeleteAll"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnProc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnProc"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnCor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnCor"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnDil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnDil"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn7"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn8"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn9"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnmultiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnmultiply"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn4"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn5"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn6"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnmin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnmin"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnpl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btnpl"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn0"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btndrob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btndrob"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
            <Button
                android:id="@+id/btnres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btnres"
                android:textSize="25dp"
                android:background = "@drawable/roundedbutton"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>